# es-flow

./: .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py
docs/: CMakeLists.txt  conf.py
docs/_build/: .buildinfo  genindex.html  index2.html  objects.inv  search.html  searchindex.js  test.html
docs/_build/.doctrees/: environment.pickle  index2.doctree  test.doctree
docs/_build/.doctrees/source/: bibliography.doctree  contributing.doctree  faqs.doctree  features.doctree  gradient_solver.doctree  gradient_tutorial.doctree  guide.doctree  index.doctree  installation.doctree  license.doctree  modeling_faqs.doctree  nnls_modeling.doctree  nnls_solving.doctree  nnls_tutorial.doctree  solving_faqs.doctree  test.doctree  tutorial.doctree  users.doctree  version_history.doctree
docs/_build/_sources/: index2.rst.txt
docs/_build/source/: bibliography.html  contributing.html  faqs.html  features.html  gradient_solver.html  gradient_tutorial.html  guide.html  index.html  installation.html  license.html  modeling_faqs.html  nnls_modeling.html  nnls_solving.html  nnls_tutorial.html  solving_faqs.html  test.html  tutorial.html  users.html  version_history.html
docs/figures/: Type A Eddy Structure.fig  Type B1 Eddy Structure.fig  Type B2 Eddy Structure.fig  Type B3 Eddy Structure.fig  Type B4 Eddy Structure.fig
docs/source/: CMakeLists.txt  adem.rst  bibliography.bib  compilation.rst  conf.py  examples.rst  file_formats.rst  index.rst  installation.rst  license.rst  models.rst  selector_tidal.html  selector_wind.html  supported_instruments.rst  turbulence.rst  turbulence_coherent_structures.rst  turbulence_tidal.rst  turbulence_wind.rst  users.rst  validation.rst  version_history.rst
docs/source/_static/: selector_tidal.json  selector_wind.json  wind_effects_selector_no_ws.json
docs/source/_static/validation/: check_j13_with_outer_influence.json  check_type_A_iij_from_cpp.json  check_type_A_jij_from_cpp.json  check_type_B1_iij_from_cpp.json  check_type_B1_jij_from_cpp.json  check_type_B2_iij_from_cpp.json  check_type_B2_jij_from_cpp.json  check_type_B3_iij_from_cpp.json  check_type_B3_jij_from_cpp.json  check_type_B4_iij_from_cpp.json  check_type_B4_jij_from_cpp.json  validation_marusic_and_perry_6a_with_outer_influence.json  validation_marusic_and_perry_6b_with_outer_influence.json  validation_perry_and_marusic_11.json  validation_perry_marusic_6c_with_outer_influence.json
logs/: .gitignore
source/: CMakeLists.txt  adem_analysis.cpp  adem_signature.cpp  adem_signature.h  constants.h  data_types.h  definitions.h  exceptions.h  fit.h  fit_profiles.cpp  fit_profiles.h  flow.h  how_to.h  instrument_analysis.cpp  instrument_analysis.h  main.cpp  profile.cpp  profile.h  profiles_spectrum.cpp  profiles_spectrum.h  profiles_stress.cpp  profiles_stress.h  profiles_velocity.cpp  profiles_velocity.h  readers.cpp  readers.h  variable_readers.h
source/adem/: AdemAnalysis.cpp  AdemAnalysis.h  AdemAnalysis_test.cpp  Signature.cpp  Signature_test.cpp  adem.cpp  adem.h  adem.m  analysis.cpp  analysis.h  biot_savart.h  debugspectra.m  fitMeanProfile.m  getEddyDeficit.m  getEddyIntensity.m  getEddySpectra.m  getMeanProfile.m  getReynoldsStress13.m  getShear.m  getTw.m  plotADEM.m  setupEddyDatabase.m  signature.cpp  signature.h
source/adem/debug/: debugspectra_vik.m  ges.m  getEddySpectra_debug.m  getEddySpectra_vik.m
source/analyse/: getReynoldsStress.m  spectrumADCP.m  spectrumData.m  spectrumFit.m  spectrumFitVonKarman.m  spectrumNoise.m  spectrumPlotKaimal.m  spectrumPlotvonKarman.m  spectrumVonKarmanBasic.m  xcorrADCP.m
source/bathymetry/: bathyDepth.m  bathyGradients.m  plotBathy.m
source/classes/InstrumentAnalysis/: InstrumentAnalysis.m
source/data/: correctTime.m  filterADCP.m  flowDirection.m  getHalfCycle.m  getWindow.m  getWindowADCP.m  preprocessADCP_partrac.m  removeNaNs.m
source/fit/: Fit.cpp  Fit.h  Fit_test.cpp
source/galion2basic/: CMakeLists.txt
source/instrument/: InstrumentAnalysis.cpp  InstrumentAnalysis.h
source/io/: loadADCP.m  loadBathy.m  loadResource.m  readers.h  variable_readers.h  variable_writers.h
source/mra/: extractCoherent.m  testMARS.m
source/profiles/: Bins.cpp  Bins.h  Bins_test.cpp  Profile.cpp  Profile.h  SpectrumProfile.cpp  SpectrumProfile.h  SpectrumProfile_test.cpp  StressProfile.cpp  StressProfile.h  StressProfile_test.cpp
source/relations/: spectra.cpp  spectra.h  stress.h  veer.h  velocity.cpp  velocity.h
source/reports/: ADCPAnalysis.m  InstrumentAnalysis.m  adcpReport.m  nemoReport.m
source/streams/: streamEulerian.m
source/utilities/: conv.h  cumsum.h  cumtrapz.h  fcsPath.m  fcsVer.m  filter.h  integration.h  interp.h  smear.h  tensors.h  trapz.h
source/utilities/converters/: dm2deg.m  utm2deg.m
source/utilities/databases/MatFiles/: MatFiles.m
source/utilities/defaults/: OASFigureSize.m  OASFigures.m  OASHeader.m
source/utilities/io/defaultPath/: default_paths.mat
source/utilities/io/disperror/: disperror.m
source/utilities/io/dispnow/: dispnow.m
source/utilities/io/latexTable/: latexTable.m
source/utilities/montecarlo/code_evaluationFunctions/: herbieAddFcn.m
source/utilities/montecarlo/code_monteCarlo/: discretesample.m  herbie.m
source/utilities/montecarlo/code_pdfs/: PDFObject.m  rediscretisePDF.m
source/utilities/signalprocessing/: dctn.m  idctn.m  sincResample.m  smoothn.m
test/: CMakeLists.txt  main_test.cpp
test/test_data/: .gitignore  check_data.m  galion2lidar_basic.m  make_fake_lidar_basic.m  make_levenmouth_lidar_basic.m  perry_marusic_figure_15.csv
test/unit/: adem_analysis_test.cpp  adem_signature_test.cpp  adem_test.cpp  fit_profiles_test.cpp  fit_test.cpp  instrument_analysis_test.cpp  profile_test.cpp  profiles_spectrum_test.cpp  profiles_stress_test.cpp  profiles_test.cpp  profiles_velocity_test.cpp  readers_test.cpp  relations_test.cpp  utilities_conv_test.cpp  utilities_cumsum_test.cpp  utilities_cumtrapz_test.cpp  utilities_integration_test.cpp  utilities_interp_test.cpp  utilities_trapz_test.cpp  window_test.cpp
(+76 files in other folders)
